modified:   bin/index.html 	modified:   package.json

--- a/bin/index.html
+++ b/bin/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>www.layabox.com</title>
+    <title>动作编辑器</title>
     <meta charset='utf-8' />
     <meta name='renderer' content='webkit' />
     <meta name='viewport'
